Attempt to fix unexpected word-wrapping in iOS

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -112,6 +112,10 @@ a {
                     font-family: 'Helvetica Neue', sans-serif;
                     letter-spacing: 0.1em;
                     font-weight: lighter;
+
+                    .time-frame {
+                        white-space: nowrap;
+                    }
                 }
                 &.project-tags {
                     color: rgb(197, 197, 199);
